[package]
name = "raysnail"
version = "0.1.1"
authors = ["7sDream <i@7sdre.am>", "Varkalandar"]
edition = "2018"
description = "Yet another simple and pure software ray tracing renderer"
license-file = "COPYING"
publish = false

[lib]
name = "raysnail"
path = "src/lib.rs"

[dependencies]
env_logger = "0.8"
log = "0.4"
rand = "0.8"
rand_xorshift = "0.3"
rayon = "1.10"
num_cpus = "1.13"
once_cell = "1.7"
sdl2 = "0.35"
vecmath ="1.0"
tobj = "4.0"

[dependencies.image]
version = "0.23"
default-features = false
features = ["jpeg_rayon", "png", "bmp"]

[profile.release]
debug = true
lto = "fat"
codegen-units = 1
panic = "abort"
